# cognizantaimlapr2026

banking/: .coverage  DOCUMENTATION.md  bankingtestreport.html  pyproject.toml  reports.html
banking/banking.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
banking/bankingenv/: pyvenv.cfg
banking/docs/: Makefile
banking_system/: .pytest.ini.swp  README.md  pyproject.toml  pytest.ini  reports.html
banking_system/bankenv/: pyvenv.cfg
banking_system/docs/: .index.rst.swp  reports.html
banking_system/src/: app.py  start.py
banking_system/tests/: test_abc_banking_group.py  test_account.py  test_corporate.py  test_current_account.py  test_customer.py  test_direct_debit.py  test_external_transaction.py  test_menu.py  test_savings_account.py  test_transaction.py
day2/: pyproject.toml
day2/ecommerce.egg-info/: PKG-INFO
day2/src/: app.py  start.py
day3/: pyproject.toml  reports.html
day5/: pyproject.toml
day5/day5env/: pyvenv.cfg
day5/src/banking_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day5/src/configurations/: conf.py
day5/src/dataloaders/: customer_csv_dataloader.py  customer_json_data_loader.py  customer_txt_data_loader.py
day5/src/exceptions/: customer_not_found.py
day5/src/models/: address.py  company_type.py  corporate.py  customer.py  full_name.py  gender.py  individual.py
day5/src/resources/: customers.csv  customers.json  customers.txt
day5/src/stores/: customer_store.py  customer_store_impl.py
day5/src/utils/: app.py  pipeline_runner.py
day6/: pyproject.toml
healthcare/: README.md  pyproject.toml
(+70 files in other folders)
