#create description about banking system

[project]
name = "banking_system"
version = "1.0.0"
description = "banking system"
readme = "README.md"
authors = [
    {name="Dikshitha",email="dikshithajella2004@gmail.com"}
]
requires-python = ">=3.8"
#production dependencies
dependencies = [
    "faker>=13.3.4",
    "pydantic>=2.10.0",
    "python-dotenv>=0.21.0",
    "pandas>=2.0.0",
]

#development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-html>=4.2.0",
    "pytest-cov>=3.0.0",
    "black>=23.3.0",
    "isort>=5.10.1",
    "sphinx>=5.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length=88
target-version = ['py313']